eks/frontend/deployment.yaml
apiVersion: apps/v1
kind: Deployment

metadata:
  name: frontend
  namespace: devops-demo

spec:

  replicas: 2

  selector:
    matchLabels:
      app: frontend

  template:

    metadata:
      labels:
        app: frontend

    spec:

      containers:

        - name: frontend

          image: pathakc28/kubernetes:02

          imagePullPolicy: IfNotPresent

          ports:

            - containerPort: 80

          readinessProbe:

            httpGet:
              path: /
              port: 80

            initialDelaySeconds: 5
            periodSeconds: 10
