eks/frontend/service.yaml
apiVersion: v1
kind: Service

metadata:
  name: frontend
  namespace: devops-demo

spec:

  selector:
    app: frontend

  ports:

    - port: 80
      targetPort: 80

  type: ClusterIP
